Add final state text

--- a/src/data/state-text/original/10-DE.md
+++ b/src/data/state-text/original/10-DE.md
@@ -1,5 +1,12 @@
 ---
-id: 10 
+id: 10
 name: Delaware
 ---
 
+As an incentive-heavy state with modest property taxes and no sales tax, Delaware’s tax burdens are competitive for both new and mature firms. Delaware ranks second overall for new firms and third overall for mature firms.
+
+Mature labor- and capital-intensive manufacturers, along with new capital-intensive manufacturers, rank first in their categories, while new labor-intensive manufacturers rank second nationwide. A low property tax that does not include equipment or inventory and the lack of a state sales tax—which significantly reduces the cost of inputs—also contributes to the low tax burden on manufacturers.
+
+New research and development (R&D) operations in Delaware benefit from above-average R&D and investment tax credits, ranking eighth in the country for the firm type. These credits help compensate for the fact that Delaware is one of only a handful of states with a gross receipts tax, which penalizes technology centers and R&D operations more than the other firms in our study. However, even mature firms benefit from low property taxes, yielding a highly competitive 11th place ranking despite the state’s unusual combination of a corporate income and a gross receipts tax.
+
+Single sales factor apportionment and the lack of a throwback rule also benefit many firms in our study. However, Delaware’s sourcing of services based on the location of the income-producing activity works to the detriment of in-state firms selling goods or services out of state.
