--- a/src/data/state-text/original/11-DC.md
+++ b/src/data/state-text/original/11-DC.md
@@ -3,3 +3,8 @@ id: 11
 name: District of Columbia
 ---
 
+The District of Columbia is a unique state-local entity, which presents particular challenges. We do not include the District in our rankings of states, but the model does calculate the city’s effective tax rates for Tier 1 firms—the corporate headquarters, research and development (R&D) facility, and technology center—and on this page we include the rank that the District of Columbia would have were it a state. Tier 2 firm types are not considered for D.C. in this study.
+
+The District of Columbia has above-average tax burdens for mature corporate headquarters and below-average burdens for mature technology centers. The lowest tax burden is for the mature technology center, which has an effective tax rate of 8.8 percent and would rank 10th in the nation. The mature R&D facility experiences an 11.7 percent effective tax rate (23rd), which is close to the national average, while the mature corporate office experiences an 18.5 percent effective rate (35th).
+
+The District of Columbia has improved its treatment of all these firms by reducing its corporate income tax rate from 9.4 percent in 2015 to 8.25 percent today as part of a broad-ranging tax reform package. The District has also improved its tax treatment of firms that do business out of state by adopting single sales factor apportionment and shifting to market-based taxation of services. However, the corporate rate is still moderately high, and the District imposes a throwback rule.
