--- a/src/data/state-text/original/12-FL.md
+++ b/src/data/state-text/original/12-FL.md
@@ -3,3 +3,12 @@ id: 12
 name: Florida
 ---
 
+Florida features a low corporate income tax and is competitive on many metrics, but several features of its tax code work against corporations, including some of the firms included in our study, including high property taxes and a sales tax base that includes many business-to-business transactions.
+
+Florida’s sourcing rules for service income, which allow the income to be sourced where the benefit of the service is received, favor firms such as shared services centers, which sell many of their services outside the state. The state also ranks well (14th) for mature corporate headquarters with an effective tax rate of 14.0 percent. This firm benefits from the state’s double-weighted sales factor apportionment, though it works to the detriment of many other firms in the study. Also contributing to this comparatively modest tax cost is a low unemployment insurance tax burden.
+
+However, the state ranks 42nd for newly established capital-intensive manufacturing firms with an above-average effective tax rate of 24.5 percent, despite the fact that Florida has the most generous investment tax credit in the nation—more than 13 times the national average, to the point of zeroing out the corporate income tax rate. Counteracting the low income tax burden is a property tax burden on manufacturing equipment that is twice the national average, plus a sales tax that similarly includes many business inputs.
+
+The state also ranks 41st for established data centers with a 14.1 percent effective tax rate. New data centers benefit from an investment incentive that is 20 times the national average for its category, while still ending up with middle-of-the-road effective rates, and mature data centers, which are denied these generous incentives, pay the price for this tax structure.
+
+Florida forgoes an individual income tax, which can be highly significant to individuals and pass-through entities but does not affect the firms considered in our study.
