--- a/src/data/state-text/original/13-GA.md
+++ b/src/data/state-text/original/13-GA.md
@@ -3,3 +3,12 @@ id: 13
 name: Georgia
 ---
 
+Georgia offers a generally attractive tax environment for all firm types, ranking fourth overall for new firms and 13th for mature firms.
+
+Research and development (R&D) operations see especially light tax burdens, with the mature firm ranking second nationwide with a 5.1 percent effective rate and the new firm ranking seventh with a 5.4 percent effective rate, largely due to a friendly income apportionment approach—single sales factor with no throwback rule—and relatively low income and unemployment insurance tax burdens.
+
+The state’s sourcing rules for services similarly favor operations such as shared services centers that have many out-of-state customers, yielding a below-average tax on new and mature centers. New shared services centers also benefit from generous tax incentives, yielding an effective rate of only 3.5 percent, ranking first in the category.
+
+Georgia’s property tax applies to equipment and inventory in addition to land and buildings, though property tax rates are generally low, and new manufacturing operations benefit from a generous property tax abatement plus a local option “freeport exemption” for manufacturing inventory.
+
+The firm types that perform the worst in Georgia compared to peers in other states—the mature corporate headquarters and the mature data center—rank 29th and 30th and experience effective tax rates of 16.6 percent and 10.1 percent, respectively. The data center sees extremely low corporate income taxes, but the sales and property tax burdens on relevant equipment counteract this benefit. Georgia exempts manufacturing machinery from the sales tax but imposes the tax on research and development (R&D) equipment. However, new R&D firms do receive incentives valued at 10 percent of in-state R&D expenses.
