--- a/src/data/state-text/original/15-HI.md
+++ b/src/data/state-text/original/15-HI.md
@@ -3,3 +3,14 @@ id: 15
 name: Hawaii
 ---
 
+Manufacturing faces exceedingly high rates of taxation in Hawaii, but some other firms benefit from generous incentives, reducing tax costs or even yielding negative rates of tax. The state sources service income to the site of the income-producing activity, exposing all service income from operations like shared services centers and distribution centers to in-state taxation.
+
+Despite relatively modest corporate income tax rates, Hawaii’s sourcing rules drive up costs for both shared services centers and distribution centers. Distribution centers, however, benefit from very low property taxes, substantially lowering their overall tax burden.
+
+A generous tax credit for research activities yields negative effective rates for both new and mature research and development (R&D) firms, with the new operation facing an effective rate of -18.2 percent and the mature operation having a -13.0 percent tax burden. The credit, which covers 20 percent of in-state R&D expenses, is refundable, though refundability is capped at $5 million.
+
+More than in other states, Hawaii’s sales tax (called the General Excise Tax) applies to sales between businesses rather than just to the end consumer. As such, manufacturing machinery is taxed in Hawaii, so the cost of equipment and other inputs for manufacturing firms is significantly higher in Hawaii than in other states, as are inputs for data centers.
+
+Hawaii imposes some of the nation’s highest tax costs on labor-intensive manufacturing, with new and mature firms facing the highest and second-highest effective tax rates, respectively. The sales tax on manufacturing machinery is a significant factor, and Hawaii’s three-factor apportionment formula, which equally weights sales, property, and payroll, works against firms with sales largely out of state. These operations also experience a high unemployment insurance tax burden.
+
+Hawaii’s unique tax structure produces highly disparate tax burdens across firms, with effective tax rates ranging from 5.1 to 23.8 percent for mature operations and 7.4 percent to 26.5 percent for new operations, not counting the highly subsidized R&D firms with their negative effective rates. While few states achieve anything close to tax neutrality across firm types, Hawaii stands out as particularly lacking in this regard.
