--- a/src/data/state-text/original/17-IL.md
+++ b/src/data/state-text/original/17-IL.md
@@ -3,3 +3,12 @@ id: 17
 name: Illinois
 ---
 
+Illinois ranks in the bottom third of states for six out of the eight mature firm types, driven by high corporate income and property taxes, while new firms face middle-of-the-road tax burdens. Illinois offers one of the more generous withholding tax credits in the nation, but incentives are rarely a substitute for a competitive, structurally sound tax system.
+
+Illinois’ corporate income tax rate combines both the traditional corporate income tax of 7.0 percent and a second tax of 2.5 percent on the same base, known as the “personal property replacement tax” for the repealed tax for which it was intended as a revenue replacement.
+
+The state’s high income tax rates lead to an above-average corporate income tax burden for all mature firm types. These firms also experience a high combined state and local sales tax rate, and the corporate headquarters, R&D operation, and technology center see higher-than-average property taxes that contribute to their low ranks.
+
+Mature shared services centers see middle-of-the-road effective tax rates despite the state’s favorable benefits-received sourcing rule. Much of the advantage of benefits sourcing is eliminated because the firm is subject to a throwout rule for service receipts attributable to a state where the taxpayer is not taxable.
+
+The state’s throwback rule also works to the detriment of research and development (R&D) facilities, with the mature firm facing a 16.5 percent effective tax rate, which is high for that firm type and ranks 47th nationwide.
