--- a/src/data/state-text/original/18-IN.md
+++ b/src/data/state-text/original/18-IN.md
@@ -3,3 +3,10 @@ id: 18
 name: Indiana
 ---
 
+Indiana generally offers lighter-than-average tax burdens for both new and mature operations. Firms of all types have benefited from the state’s reduction in the corporate income tax rate from 8.5 percent in 2012 to 5.25 percent today, with rates scheduled to drop further to 4.9 percent on July 1, 2021, the culmination of a decade of rate reductions. Indiana has adopted other reforms during this period as well, enhancing the state’s overall tax competitiveness.
+
+All mature Tier 1 firms—corporate headquarters, research and development (R&D) companies, and technology centers—rank among the top 10 nationwide. These model firms are aided by average or lower-than-average burdens across all tax types, partially due to the state’s single sales factor apportionment and market-based sourcing of services, in addition to its competitive tax rates. Research and development firms additionally benefit from related tax credits.
+
+While new distribution centers receive a generous property tax abatement that is almost seven times the national average, mature firms bear the full weight of high property taxes on a base that includes equipment and sees sales taxes slightly above average, contributing to their rank of 43rd.
+
+New manufacturing operations fare slightly better due to some of the most generous property tax abatements in the country but still experience above-average overall tax burdens. The business personal property tax on equipment also hinders manufacturers, although manufacturing machinery is exempt from the sales tax. The mature capital-intensive manufacturing operation, without access to these property tax abatements, ranks 34th in the nation. Our model firms experience a broad range of effective tax rates in Indiana, ranging from 5.8 percent for the mature data center to 50.1 percent for the mature distribution center.
