--- a/src/data/state-text/original/19-IA.md
+++ b/src/data/state-text/original/19-IA.md
@@ -3,3 +3,10 @@ id: 19
 name: Iowa
 ---
 
+Until recently, Iowa had the nation’s highest top marginal corporate income tax rate (12 percent), though recent reforms have reduced the top rate to 9.8 percent while repealing the state’s deduction for federal taxes paid, known as “federal deductibility.” Even with this positive change, however, firms in Iowa generally see high overall tax burdens.
+
+The mature capital-intensive manufacturing operation experiences Iowa’s most competitive effective rate of 8.2 percent, 11th best in the nation, due in large part to Iowa’s single sales factor apportionment formula and the lack of a throwback rule, which have the effect of exempting nearly all of a firm’s income from in-state taxation. The operation also experiences a relatively low property tax burden due to the lack of property taxes on equipment and inventory. In addition to its favorable apportionment factors for businesses selling goods out of state, Iowa’s benefits-based sourcing rules work to the advantage of Iowa-based firms selling services out of state.
+
+However, effective property tax rates can be exceedingly high for some firms—nearly double the national median for mature distribution centers, for instance, which rank 48th—greatly increasing overall tax costs. Property tax abatements tend to be highly discretionary, with Iowa relying to an unusual degree on tax increment financing to abate high commercial real estate costs driven by “rollback” provisions which keep residential property taxes in check by shifting an expanding share of overall property tax burdens to businesses.
+
+Manufacturing machinery and research and development (R&D) equipment are exempt from the state sales tax, and the R&D facility receives other incentives as well. Iowa also offers generous investment and job creation tax incentives to new firms, though due to the state’s high tax rates, most new firms continue to experience above-average tax burdens.
