--- a/src/data/state-text/original/20-KS.md
+++ b/src/data/state-text/original/20-KS.md
@@ -3,3 +3,8 @@ id: 20
 name: Kansas
 ---
 
+Tax burdens in Kansas are slightly below average for new firms—and among the lowest in the nation for new manufacturers and distribution centers—but Kansas ranks worst in the nation for mature firms. Kansas offers very low tax costs for new capital- and labor-intensive manufacturing operations and new corporate headquarters due to the Promoting Employment Across Kansas (PEAK) incentive program. Such generous incentives, however, keep tax costs for mature firms much higher than they would be if the tax burden were distributed more equitably. The state ranks 49th or 50th for all mature firm types except corporate headquarters, which rank 38th.
+
+The new data center ranks 50th among states with an effective tax rate of 64.4 percent, almost three times the national average. This is the result of average corporate income and unemployment insurance taxes combined with some of the highest sales and property taxes in the nation for firms of this type, as data center equipment is included in both tax bases. The state uses evenly-weighted three factor apportionment, sources service income based on the cost of performance, and imposes a throwback rule.
+
+Tax burdens in Kansas fall very unequally on different firm types and on new versus mature operations. For example, the new data center’s 64.4 percent tax rate, or the mature distribution center’s 65.7 percent rate, contrasts with a 2.9 percent effective tax rate on new capital-intensive manufacturing. Meanwhile, the mature capital-intensive manufacturing firm experiences a 28.1 percent effective tax rate (worst in the nation), which is almost 10 times the burden on the new firm, which experiences the second-best effective rate in the nation.
