--- a/src/data/state-text/original/21-KY.md
+++ b/src/data/state-text/original/21-KY.md
@@ -3,3 +3,12 @@ id: 21
 name: Kentucky
 ---
 
+Kentucky imposes relatively moderate income and sales tax burdens, low unemployment insurance taxes, and low property taxes. The state offers few incentives for new businesses other than withholding tax rebates, allowing the state to impose below-average tax burdens on most mature firm types and to provide relatively equitable tax treatment across new and mature firms. Kentucky ranks 13th in the country for new firms and 14th for mature firms.
+
+The state’s worst performance compared to other states is in its tax treatment of the new capital-intensive manufacturer, which faces an effective rate of 26.2 percent, ranking 46th in the country. Capital-intensive manufacturers are penalized by Kentucky’s extension of the property tax to equipment and inventory, with the new firm seeing an effective property tax rate of 26.2 percent, more than twice the national median. Kentucky is one of only nine states to broadly tax business inventory.
+
+Manufacturing machinery is exempt from the sales tax. Research and development (R&D) equipment is only exempt subject to certain conditions and state approval, though one of the state’s few non-withholding incentives is an investment credit for new R&D firms.
+
+The state’s relatively low corporate income tax rate—the result of recent reforms—contributes to below-average income tax burdens for most firms, while the single sales factor apportionment formula captures profits based on the volume of sales made inside the state, relieving firms like distribution centers that see sales largely out of state.
+
+This apportionment formula, in addition to the market-based sourcing of services, helps drive the particularly low tax burden on the new shared service center, with an effective tax rate of 3.9 percent, ranking third among states. This operation is also helped by a generous withholding tax rebate, moderate unemployment insurance tax burdens, and a low property tax burden, despite the fact that the state levies property taxes on equipment and inventory in addition to land and buildings.
