--- a/src/data/state-text/original/22-LA.md
+++ b/src/data/state-text/original/22-LA.md
@@ -3,3 +3,14 @@ id: 22
 name: Louisiana
 ---
 
+Louisiana’s tax structure is characterized by high rates and partially offsetting incentives. These incentives generally favor new businesses, leaving all mature operations except labor-intensive manufacturers with above-average tax burdens.
+
+Louisiana offers the lowest overall tax burden in the country for new technology centers, due less to its overall tax structure than to its unusually generous incentives programs. The applicable jobs tax credit is 23 times the national average for that category, resulting in the only negative tax burden for new technology centers in the nation. The mature technology center, on the other hand, experiences a 16.6 percent effective rate, the seventh highest in the country due to high income and property tax burdens.
+
+The new capital-intensive manufacturing firm receives generous tax incentives but still ranks 43rd in overall effective rates because of a property tax burden that is more than three times the national median. Louisiana taxes both equipment and inventory at the local level, though the state provides a credit against inventory tax liability.
+
+For the new corporate office establishment, Louisiana provides the largest withholding tax rebate of the 13 states offering such incentives, yielding a low 12.2 percent effective tax rate. However, the state’s high income tax rate is further exacerbated by a throwout rule. While service income is taxed at the location where the service is received, service companies must use a two-factor payroll and sales apportionment formula rather than the single sales factor apportionment formula available to other operations.
+
+Tax burdens for both new and mature data centers rank 47th in their categories. In addition to the property taxes faced by other firms, data centers experience a heavier capital stock (franchise) tax burden. The inclusion of data equipment in the sales tax base results in a sales tax burden that is one-and-a-half times the national median.
+
+Non-neutrality—across firms, maturity, and tax types—is a prevalent theme throughout Louisiana’s tax code.
