--- a/src/data/state-text/original/23-ME.md
+++ b/src/data/state-text/original/23-ME.md
@@ -3,3 +3,8 @@ id: 23
 name: Maine
 ---
 
+Maine’s corporate income tax rate is high, but the state employs sourcing rules that tax service income where the benefits are received, ameliorating the rate’s impact for firms that sell services out of state. The state also uses single sales factor apportionment. In contrast to the experience of most other states, mature businesses in Maine tend to see better overall tax burdens than new companies, since the state offers few tax incentives and is thus more neutral across new and mature firms, to the benefit of mature firms which often suffer by comparison.
+
+Maine’s most competitive ranking is in its tax treatment of mature technology centers, ranking 12th. The firm benefits from the state’s relatively low 5.5 percent sales tax and a single sales factor apportionment formula that gives it one of the lowest income tax costs for this type of operation. The same factors help the state provide better-than-average tax treatment of the mature research and development (R&D) facility.
+
+However, Maine includes equipment in its property tax base, contributing to high property tax burdens for capital-intensive manufacturers. The inclusion of equipment in the property tax base, combined with the state’s high income tax rate and throwout rule, are substantial contributors to Maine’s ranking among the six worst states in terms of total effective tax rates on new and mature capital- and manufacturing-intensive manufacturers. 
