--- a/src/data/state-text/original/24-MD.md
+++ b/src/data/state-text/original/24-MD.md
@@ -3,3 +3,8 @@ id: 24
 name: Maryland
 ---
 
+By largely forgoing withholding and investment credits, Maryland is among a small number of states offering lower effective rates for mature, rather than new, firms. These mature firms are also helped by benefits sourcing and the lack of a throwback or throwout rule. Furthermore, the state uses three-factor apportionment with sales weighted six times as much as property and payroll, as part of a phase-in of single sales factor apportionment, which will commence in 2022. Manufacturing firms already enjoy the benefit of single sales factor apportionment.
+
+However, the state’s high property tax rate on equipment contributes to the higher-than-average property tax burdens experienced by most of the new firms in our study, as well as some of the mature firms. New and existing data centers each see the second-highest property tax burden in the country for their firm types, as relevant equipment is included in the property tax base. However, lower-than-average income, unemployment insurance, and sales taxes partially offset this burden, and the mature firm ranks 27th among such operations nationwide. The property tax burden is substantially higher on new firms, ranking 38th in the country.
+
+The new capital-intensive manufacturing firm performs well in Maryland with an effective rate of 6.3 percent, fifth among this firm type. It benefits from a favorable apportionment formula—special single sales factor apportionment applies to manufacturing—which compensates for the state’s high 8.25 percent corporate income tax rate. New firms of this kind receive a generous property tax abatement, but mature firms of the same type also perform well due to low income, unemployment insurance, and sales tax burdens. Mature capital-intensive manufacturers rank seventh with an effective rate of 7.1 percent.
