--- a/src/data/state-text/original/25-MA.md
+++ b/src/data/state-text/original/25-MA.md
@@ -3,3 +3,8 @@ id: 25
 name: Massachusetts
 ---
 
+Massachusetts employs double-weighted sales factor apportionment, sources service income where the income-producing activity takes place, and imposes a throwback rule, all combining to exacerbate the burden of the state’s already high 8 percent corporate income tax rate. In addition to high income taxes, high property taxes contribute to the state’s consistently poor rankings for our model firms. As a result, Massachusetts ranks 49th overall for both new and mature firms.
+
+Most firms in our study, which sell largely out of state, are disadvantaged by Massachusetts’ apportionment rules, although manufacturers enjoy the benefit of being able to use single sales factor apportionment. Generous property tax abatements and investment tax credits reduce income and property tax liability for select new firms like the new capital-intensive manufacturer, resulting in the only below-average effective tax rate experienced by any of our model firms in Massachusetts. Conversely, the mature capital-intensive manufacturer, which does not benefit from investment tax credits, experiences an effective rate 32 percent above the national median due to the high income tax burden.
+
+The state’s high property tax rates—which extend to equipment—disadvantage in-state firms, especially distribution centers. Massachusetts ranks 49th and 47th for new and mature distribution centers, respectively. High burdens and a lack of incentives combine to mean new distribution centers pay an effective property tax rate equal to 266 percent of the national median. This results in an overall effective rate of 73.1 percent—almost twice the national average. Similar factors impact the new shared services center, which experiences the highest rate in the country, and data centers, which pay the third-highest effective rate.
