--- a/src/data/state-text/original/27-MN.md
+++ b/src/data/state-text/original/27-MN.md
@@ -3,3 +3,10 @@ id: 27
 name: Minnesota
 ---
 
+Minnesota’s high corporate income, unemployment insurance (UI), and property tax burdens are responsible for an effective tax rate of 25.7 percent for the mature corporate headquarters, ranking 48th nationwide. The firm receives no meaningful tax incentives. Conversely, the state ranks sixth for the mature capital-intensive manufacturing operation, which experiences a low 6.7 percent effective tax rate. The burden of the state’s 9.8 percent corporate income tax rate is largely avoided by this firm due to single sales factor apportionment and the lack of a throwback rule.
+
+The state ranks 42nd for the mature research and development (R&D) operation with an effective tax rate of 15.4 percent. Despite benefiting from the favorable apportionment rules, this operation faces the second-highest property tax burden in the nation for this firm type. The state offers a modest R&D tax credit.
+
+Although Minnesota’s sourcing rules, which locate income where the benefit is received, are favorable to operations like shared services centers and result in a low income tax burden for the mature operation, favorable sourcing rules cannot overcome the above-average unemployment insurance and sales taxes experienced by this firm. The state’s UI tax burden is above average for all firms in our study, which drives up tax costs for all firms, but particularly those that tend to be labor-intensive.
+
+Minnesota offers few incentives, which, combined with high unemployment insurance and property taxes (and high income taxes for firms that sell in-state), yield substantially above-average tax burdens for most new operations. The data center and capital-intensive manufacturer are the only exceptions, as these firms benefit from generous property tax abatements and the lack of equipment in the property tax base.
