--- a/src/data/state-text/original/28-MS.md
+++ b/src/data/state-text/original/28-MS.md
@@ -3,3 +3,10 @@ id: 28
 name: Mississippi
 ---
 
+Despite a modest corporate income tax rate, Mississippi imposes relatively high tax costs on manufacturing operations and about-average costs on most other mature firms. The state offers job creation tax credits, withholding rebates, property tax abatements, capital investment incentives, and other tax credits to qualifying firms, which can substantially reduce tax burdens for many firms. Partially due to these incentives, new distribution centers in Mississippi face the fifth-lowest effective rate nationwide, with every other new firm in our study except the capital-intensive manufacturer also experiencing a below-average total effective tax rate. Overall, Mississippi ranks 12th for new firms but 39th for mature firms.
+
+The state’s property tax applies to inventory and equipment as well as buildings and land. Mississippi also imposes an antiquated capital stock tax, although it is scheduled to be fully phased out by 2028. Taken together, these factors penalize capital-intensive businesses, which is why the mature capital-intensive manufacturing operation ranks 40th nationwide with an effective tax rate of 17.5 percent.
+
+Moreover, while most firms in Mississippi are subject to single sales factor apportionment, which benefits firms that sell out of state, manufacturing operations are subject to either three-factor apportionment or a two-factor formula that uses the average of the property and payroll factors plus the sales factor, to the detriment of these operations. Few states offer different apportionment factors to distinct firm types, and when they do, they tend to offer manufacturing a more favorable formula, not a less advantageous one as Mississippi does.
+
+The state’s sourcing rules, which levy tax burdens where the income-producing activity takes place, and a moderately high sales tax work against firms like the mature data center and mature technology center, and the throwback rule increases tax costs for all firms that do business in states with which they lack nexus.
