--- a/src/data/state-text/original/30-MT.md
+++ b/src/data/state-text/original/30-MT.md
@@ -3,3 +3,12 @@ id: 30
 name: Montana
 ---
 
+Montana ranks second for mature corporate headquarters, with an effective rate just over half the median nationwide. The lack of a state sales tax and relatively low property taxes are the contributing factors in this ranking. The operation also has a modest income tax burden due to the state’s three-factor apportionment formula.
+
+Conversely, three-factor apportionment works to the detriment of manufacturing operations. Montana ranks 37th for mature capital-intensive manufacturing, with an effective tax rate of 15.4 percent. This firm type bears tax burdens above the national median across all the major tax categories—income, unemployment insurance, and property—except the sales tax. For instance, unemployment insurance taxes are 50 percent higher than the median and 9th highest nationwide.
+
+The lack of a sales tax benefits all firms and reduces the cost of purchasing equipment and machinery. Montana does, however, extend its property tax to equipment, which results in capital-intensive manufacturers paying property tax rates above the national median.
+
+The state’s market-based sourcing rules for services are beneficial to some firms, like shared services centers, which face a below-average total effective tax rate despite high unemployment insurance tax burdens.
+
+The mature distribution center benefits from a low property tax and the lack of a state sales tax, which results in an effective rate 33 percent below the national median. Data centers are in a similar situation, although they also receive generous property tax abatement, which means they experience an effective rate well below the median. In fact, new data centers enjoy a rate that is a quarter of the national average.
