--- a/src/data/state-text/original/33-NH.md
+++ b/src/data/state-text/original/33-NH.md
@@ -3,3 +3,10 @@ id: 33
 name: New Hampshire
 ---
 
+New Hampshire forgoes individual income taxes (except on interest and dividend income) and sales taxes but compensates in part with two business taxes: the Business Profits Tax, a high-rate corporate income tax, and the Business Enterprise Tax, which is essentially a value-added tax. The lack of an individual income tax benefits many small businesses but does not aid the C corporations represented in our model firms.
+
+The state’s high corporate income tax rate is further exacerbated by a throwback rule and the use of double-weighted sales factor apportionment, and sources service income to the location where the services are performed, not where their benefit is received. (The state is set to shift to single sales factor apportionment in 2022.) These tax provisions yield high tax burdens for most of the mature firms in our study. The new data center faces an effective rate nearly 14 times the national median.
+
+The absence of a state sales tax and moderate property tax burdens benefit new and mature capital-intensive manufacturers, as well as the corporate headquarters, although these firms do experience high income and unemployment insurance tax burdens.
+
+The same factors are at work for the state’s new labor-intensive manufacturing operation, which experiences the 6th highest income tax burden in the nation for its firm type. This results in New Hampshire ranking 35th for this firm type despite average unemployment insurance tax burdens and the absence of a sales tax. Similarly, new research and development (R&D) facilities in New Hampshire are burdened by the 2nd highest effective income tax rate nationwide. The rate is a full 28.3 percentage points higher than nearby New York’s. Mature R&D facilities pay an effective income tax more than 10 times the national median.
