--- a/src/data/state-text/original/34-NJ.md
+++ b/src/data/state-text/original/34-NJ.md
@@ -3,3 +3,8 @@ id: 34
 name: New Jersey
 ---
 
+New Jersey’s anomalously high corporate income tax contributes to the state’s above-average tax burdens for most model firms, as do high property and unemployment insurance taxes. For instance, New Jersey ranks 46th for both mature and new distribution centers due to some of the nation’s highest unemployment insurance, income, and property tax burdens for this firm type, along with above-average sales tax burdens. This tax trifecta is also responsible for high taxes on corporate headquarters, with the new corporate headquarters facing effective income tax rates twice the national median, along with high property and unemployment insurance tax burdens.
+
+Manufacturing firms benefit from the state’s single sales factor apportionment, with the mature capital-intensive manufacturing firm facing an effective income rate 71 percent below the national median despite the high corporate rate, and the new capital-intensive manufacturer paying a negative effective income tax rate of -0.1 percent. Capital-intensive manufacturers and the mature data center also enjoy modest property tax burdens, since, while property taxes in New Jersey are high, equipment is not included in the tax base.
+
+Despite single sales factor apportionment and the lack of a throwback rule, the new shared services center experiences the 3rd highest effective rate in the country due to high property taxes and the nation’s 2nd highest unemployment insurance taxes. For the same reason, and despite the 2nd lowest effective income tax rate, New Jersey ranks 47th for mature shared services centers.
