--- a/src/data/state-text/original/36-NY.md
+++ b/src/data/state-text/original/36-NY.md
@@ -3,3 +3,8 @@ id: 36
 name: New York
 ---
 
+New York’s single sales factor apportionment and lack of a throwback reduce the impact of corporate income taxes for many firms, though the tax’s multiple bases add to complexity, and sometimes tax costs. The state sources service income to the location of the customer, which benefits service sector firms working for out-of-state clients. The mature shared services center, which is subject to this favorable sourcing rule, enjoys an effective income tax rate 89 percent below the nationwide median. Despite this, both mature and new firms of this type pay the 2nd highest effective rate due to effective property tax rates twice the national median.
+
+The state ranks 50th in two firm categories: corporate headquarters and distribution centers. Mature corporate headquarters have total burdens nearly twice the median, and they face income tax rates nearly three times the national median, the highest income tax burdens for this firm type. Similarly, new corporate headquarters experience a total effective rate more than double the national median. Distribution centers also see anomalously high tax burdens, as do some manufacturers. New distribution centers, for instance, experience a property tax rate almost three times greater than the national median, while manufacturing operations experience high sales and property taxes on their activities, with the mature labor-intensive manufacturing operation facing the 2nd highest property tax burden nationwide for that firm type.
+
+This stands in stark contrast to the new research and development (R&D) facility, which enjoys a negative total effective tax rate. Due to the Excelsior tax credits program, New York’s new R&D facility has the 2nd lowest total effective rate in the country at -2.4 percent. New York’s heavy reliance on incentives for certain firms leads to much higher effective rates for mature firms. While the state is highly competitive in its treatment of the new R&D facility, the state ranks 44th for the mature R&D facility. New technology centers also benefit from incentives, resulting in a negative income tax rate of -13.4 percent. Furthermore, favorable apportionment and moderate property and sales taxes result in the state ranking 3rd for mature data centers and 6th for new data centers.
