--- a/src/data/state-text/original/39-OH.md
+++ b/src/data/state-text/original/39-OH.md
@@ -3,3 +3,8 @@ id: 39
 name: Ohio
 ---
 
+Although Ohio lacks a traditional corporate income tax, it does have the Commercial Activity Tax (CAT), a gross receipts tax. Due to the effects of tax pyramiding, effective tax rates can understate the full economic costs imposed on firms by the state’s tax system. Additionally, tax burdens in Ohio also differ widely across firms due to tax incentives, including particularly property tax abatements, withholding tax rebates, and research and development (R&D) credits, which are offered to select new firms.
+
+Ohio ranks 28th for the mature distribution center, which has an effective tax rate of 37.3 percent. Although this firm has a low corporate tax cost, this light burden is combined with above-average property tax costs. Due to generous property tax abatement, however, Ohio ranks first for the new distribution center. Similarly, the CAT falls heavily on manufacturing, but those burdens are offset by property tax abatements as well as withholding tax rebates for new firms. The new capital-intensive manufacturer’s total effective tax rate is 3.7 percent, ranking 3rd overall. A low property tax burden also means that the mature capital-intensive manufacturer enjoys the 4th lowest rate nationwide.
+
+Property tax abatements also benefit new distribution centers and data centers as well as manufacturing operations. Ohio’s new distribution center has an effective tax rate of 15.4 percent, the lowest effective rate nationwide and less than half the national median. The new data center also pays the lowest effective rate nationwide for its firm type, due in large part to the property tax abatement and withholding tax rebate available to this firm type, along with low sales tax burdens due to the availability of partial or full sales tax exemptions for data center equipment.
