--- a/src/data/state-text/original/41-OR.md
+++ b/src/data/state-text/original/41-OR.md
@@ -3,3 +3,10 @@ id: 41
 name: Oregon
 ---
 
+Oregon’s high corporate income tax rate along with its throwback rule yields above-average overall tax burdens for many firms in our study despite the state forgoing a sales tax. Oregon is also one of only two states, with Delaware, to impose a gross receipts tax in addition to the corporate income tax.
+
+Nonetheless, services firms like the shared services center benefit from favorable sourcing rules, enjoying below-average effective tax rates. The low income tax burden for this operation, combined with the lack of a sales tax, means that the mature firm experiences one of the lowest overall tax burdens for its firm type with an effective tax rate of 17.5 percent.
+
+Those same factors, in addition to low property tax burdens, result in both new and mature distribution centers experiencing effective tax rates that are well below average. Of these, the mature firm sees the 2nd lowest effective tax rate for its firm type at 18.3 percent. Both operations are constrained by one of the highest unemployment insurance tax burdens in the nation, although this comprises only a small portion of overall tax obligations for these firms.
+
+The state’s throwback rule burdens new and mature labor- and capital-intensive manufacturing plants and, when combined with the state’s high corporate taxes, results in the highest income tax burdens in the nation for each of the four firm iterations. Furthermore, property taxes in Oregon extend to equipment, which can have a substantial impact, particularly on manufacturing firms that already see high gross receipts tax burdens. By way of example, the state imposes a particularly high property tax burden on the new capital-intensive manufacturing firm (16.4 percent) but a moderate property tax effective rate (6.5 percent) for the mature firm.
