--- a/src/data/state-text/original/45-SC.md
+++ b/src/data/state-text/original/45-SC.md
@@ -3,3 +3,10 @@ id: 45
 name: South Carolina
 ---
 
+South Carolina’s single sales factor apportionment and lack of a throwback rule work to the benefit of many of the firms in our study, as does the state’s relatively modest corporate income tax rate. However, the state imposes some of the highest effective property tax rates in the country, due in significant part to high property taxes on equipment, and its service sourcing rules penalize some firms. A capital stock (franchise) tax also adds to overall tax costs.
+
+The state’s lightest tax costs are on labor-intensive manufacturing firms. The new firm ranks 10th overall with an effective rate of 7.5 percent, while the mature firm ranks 23rd with an effective rate of 10 percent. These firms benefit from a low income tax burden, attributable to single sales factor apportionment, the lack of a throwback rule, and generous incentives available to the new firm. They are hindered, however, by extremely high property tax burdens despite a particularly generous property tax abatement available for 20 years of operations. All other firm types in our study except the new corporate headquarters experience above-average tax burdens in South Carolina, often by significant margins.
+
+The new distribution center experiences a heavy tax burden with an effective tax rate of 61.5 percent, just shy of double the median rate for this firm type nationwide. The mature distribution center’s 48.6 percent tax rate is among the 10 highest in the nation for that firm type, due in large part to its property tax burden, and to the fact that the state’s sourcing rules for service income expose 100 percent of the firm’s income to in-state taxation. High property taxes also plague data centers, where the new data center pays an effective tax rate of more of 40 percent, more than double the rate on mature operations.
+
+Substantial inequities exist across firm types, ranging from 7.5 percent for the new labor-intensive manufacturing operation to 61.5 percent for the new distribution center. South Carolina is one of 15 states which still imposes a capital stock tax (called the Corporate License Fee), and one of 13 that requires business taxpayers to remit both corporate income taxes and capital stock taxes, rather than just the higher of the burdens.
