--- a/src/data/state-text/original/46-SD.md
+++ b/src/data/state-text/original/46-SD.md
@@ -3,3 +3,10 @@ id: 46
 name: South Dakota
 ---
 
+South Dakota levies neither corporate nor individual income taxes, and the state has generally low property taxes and modest sales tax rates even with local sales taxes included, though sales tax burdens can be high for some firms. Accordingly, mature firms experience consistently low tax burdens in South Dakota, with five of the eight mature firms we modeled ranking in the top 10 for lowest tax burdens.
+
+In South Dakota, no notable incentives are available to any of our model firms. By forgoing a corporate income tax and imposing generally low tax burdens, the state ranks 2nd best in the nation for mature firms, while new firms—which often enjoy substantial incentives elsewhere—face middle-of-the-pack effective rates. The mature technology center, which has the 4th lowest total effective tax rate, and the mature capital-intensive manufacturer, which has the 3rd lowest total effective tax rate, perform especially well in South Dakota due to the lack of an income tax, low unemployment insurance taxes, and modest property taxes.
+
+The newly established data center is the only firm in South Dakota to experience a tax burden above the median for its firm type, with an effective tax rate of 18.2 percent, 24 percent above the median rate nationwide. A high sales tax burden, almost 14 times the median, is responsible for this ranking. South Dakota has one of the country’s broadest sales tax bases, which includes many business inputs and leads to tax pyramiding, where some transactions are taxed multiple times over the course of production.
+
+Because of the high sales tax burden and lack of incentives commonly offered by other states, new manufacturers see less competitive rates than their mature counterparts. Mature manufacturing operations, both labor- and capital-intensive, fare well in South Dakota, since the state forgoes a corporate income tax, has low property taxes, and does not impose property taxes on equipment or inventory. The mature capital-intensive manufacturing operation ranks 3rd with an effective tax rate of 6.0 percent, while the labor-intensive operation ranks 7th with an effective tax rate of 7.4 percent.
