--- a/src/data/state-text/original/48-TX.md
+++ b/src/data/state-text/original/48-TX.md
@@ -3,3 +3,10 @@ id: 48
 name: Texas
 ---
 
+Texas does not levy a traditional corporate income tax. It does, however, impose a modified gross receipts tax known as the Margin Tax, which is levied at a rate of 0.75 percent on a calculation of taxable margin, with half-rates for retail and wholesale. Although certain subtractions from total gross receipts are allowed, the amount subject to tax is much higher than would be associated with a traditional corporate income tax.
+
+While Texas sources service income to the location of the income-producing activity, to the detriment of service providers in our study, the state does use single sales factor apportionment without a throwback rule, which benefits firms selling goods out of state. The state’s relatively high property and sales taxes, combined with a lack of general tax incentives, yield substantially above-average tax burdens for all new firm types. Mature firms rank better and consistently experience lower effective tax rates.
+
+Texas includes equipment and inventory in its property tax base in addition to land and buildings, driving up the costs for most firms in our study, but particularly the manufacturing, distribution, and research and development (R&D) operations. It is one of only nine states to tax all inventory. Property tax rates are also high, reflecting the state’s above-average reliance on location taxation.
+
+Low taxes in other areas yield moderate overall rates for mature capital- and labor-intensive manufacturing operations, despite high property tax burdens. However, the new R&D, technology center, and manufacturing operations experience some of the highest tax burdens for firms of their type in the nation, driven by high property and sales taxes and only modest incentives.
