--- a/src/data/state-text/original/49-UT.md
+++ b/src/data/state-text/original/49-UT.md
@@ -3,3 +3,10 @@ id: 49
 name: Utah
 ---
 
+Utah ranks 22nd overall for new firms and 16th for mature firms, with an equal number of firms experiencing above- and below-average total effective rates. The state generally employs a single sales factor apportionment formula with a throwback rule. However, operations with more than half their total payroll and property in the state—such as the manufacturers in our study—are given a choice between less favorable double-weighted sales factor or evenly-weighted three factor apportionment.
+
+These factors contribute to above-average income tax burdens and total effective tax rates for most of the model manufacturing and shared services firms. Additionally, Utah’s unemployment insurance tax burdens are the highest in the country for all six iterations of the model manufacturing and shared services firms due to a broad taxable wage base and high maximum rates. These firms are also hindered somewhat by a property tax base that includes equipment, although manufacturing machinery is exempt from the sales tax, which is particularly beneficial to new firms.
+
+The state’s sourcing rules, which only source service income to Utah if the majority of the benefit is received in-state, work to the advantage of companies providing services out of state. As a result, the new shared services center sees an income tax burden that is only slightly above average for its firm type. The mature distribution center sees an effective income tax burden in the same range—just above average—despite the relatively unfavorable apportionment rules and an unemployment insurance effective rate nearly five times the national median.
+
+Both new and mature data centers also benefit from the state’s single sales factor apportionment and sourcing rules, ranking 7th and 4th, respectively. Utah offers incentives to research and development (R&D) facilities regardless of age, which works to the particular benefit of mature R&D operations, which are not always eligible for such incentives. Moreover, R&D equipment is exempt from the sales tax.
