--- a/src/data/state-text/original/50-VT.md
+++ b/src/data/state-text/original/50-VT.md
@@ -3,3 +3,12 @@ id: 50
 name: Vermont
 ---
 
+Vermont combines a high corporate income tax with three-factor double-weighted sales factor apportionment and a throwback rule, although sourcing rules only capture only services that are received in Vermont. The result is above-average tax burdens for most Tier 2 firms in our study, while Tier 1 firms see effective rates close to average.
+
+Vermont ranks 47th for new and 49th for mature capital-intensive manufacturing operations, due in large part to the state’s high 8.5 percent statutory corporate income tax rate, which saddles the mature firm with one of the highest income tax burdens in the nation for its firm type. Notably, the property tax base includes equipment, an inclusion which affects firms like technology and the data center, as well as manufacturers.
+
+Vermont offers relatively few incentives but does provide generous withholding tax rebates for new firms. These incentives do not compensate for the other uncompetitive elements of the tax code, however, resulting in an overall ranking of 41st for new firms.
+
+Both the new and mature shared services centers benefit from some of the lowest unemployment insurance tax burdens in the nation—due to a narrow wage base and relatively low rates—as well as modest sales tax burdens. Low unemployment insurance tax burdens are a major factor for distribution centers, which nonetheless experience high total effective tax burdens due to high property taxes that extend to equipment.
+
+Research and development (R&D) firms receive the best tax treatment in the state, with new firms ranking 16th and mature firms ranking 21st, partly due to a related tax incentive. Corporate headquarters see middle-of-the road tax burdens, both ranking 26th. These firms benefit from low unemployment insurance tax burdens and slightly below-average sales taxes, but the mature firm experiences higher-than-average income tax burdens due to the state’s three-factor apportionment.
