--- a/src/data/state-text/original/51-VA.md
+++ b/src/data/state-text/original/51-VA.md
@@ -3,3 +3,10 @@ id: 51
 name: Virginia
 ---
 
+Virginia offers a competitive tax environment for many firms in our study, with modest effective tax rates on mature firms. The Commonwealth offers research and development (R&D) credits as well as withholding tax rebates for new firms, but it relies less heavily on incentives than some of its peers, creating a more neutral tax environment that benefits companies with longer time horizons.
+
+Virginia uses double-weighted sales factor apportionment, with an optional single sales factor apportionment formula for certain industries, including manufacturing. The Commonwealth does not employ a throwback rule but does source service income to the location of income-producing activity, which increases tax costs for service-oriented businesses with operations in-state.
+
+High property taxes on equipment (the machinery and tools tax) impact tax burdens for some firms, even if such differences do not create uncompetitive overall effective rates. Virginia is one of a handful of states to impose a gross receipts tax, the locally levied Business, Professional and Occupational License (BPOL) Tax, with rate schedules varying across localities. This tax is imposed in addition to the state’s 6.0 percent corporate income tax. It works to the disadvantage of low-margin firms, and those with longer production chains. Some localities impose an inventory tax, the merchants’ capital tax, though local jurisdictions cannot impose all three of these taxes in tandem.
+
+Research and development (R&D) facilities face above-average income tax costs due to Virginia’s sourcing rules and relatively modest R&D incentives. Middle-of-the-pack tax burdens on data centers have proven sufficient for Virginia to maintain its historic standing as the internet’s capital.
