--- a/src/data/state-text/original/53-WA.md
+++ b/src/data/state-text/original/53-WA.md
@@ -3,3 +3,8 @@ id: 53
 name: Washington
 ---
 
+In lieu of a traditional corporate income tax, Washington imposes a gross receipts tax called the Business & Occupation (B&O) tax. The structure of this tax, which imposes different rates on distinct industry categories, incentivizes vertical integration as firms seek to claim an industry classification subject to a lesser tax burden and reduce their exposure to tax pyramiding. Because our model firms represent “typical” examples of their type, they fare better under gross receipts taxation than would many real-world firms, since Washington’s B&O tax is indifferent to a firm’s actual profit margins, and raises input costs.
+
+The new technology center sees a high comparative burden, ranking 41st for its firm type, driven in part by the sales taxation of business inputs. However, both variations of technology centers experience very high burdens from the state’s gross receipts tax. The mature firm sees a B&O payment that is more than two and a half times the median corporate income tax burden. Manufacturers are also heavily burdened by this tax. On the other end of the spectrum, the mature distribution center ranks 11th, one of the few firm types that sees lower-than-average overall burdens.
+
+Apportionment under the B&O tax is based on receipts and uses benefit sourcing for service income, both of which favor many of the firms in our study, but the state also has a throwout rule which increases in-state taxability. Washington’s property tax base includes equipment, though the sales tax base expressly excludes manufacturing machinery, servers, and research and development (R&D) equipment. Unlike in states with a traditional income tax, however, these purchases do not reduce Washington taxable income.
