--- a/src/data/state-text/original/54-WV.md
+++ b/src/data/state-text/original/54-WV.md
@@ -3,3 +3,12 @@ id: 54
 name: West Virginia
 ---
 
+West Virginia’s tax burdens are above the median for all model firms in our study except for new data centers. Notably, however, the disparity in rates between new and mature firms is relatively small in West Virginia compared to most other states.
+
+The state uses three-factor double-weighted sales factor apportionment and imposes a throwout rule. Service income, moreover, is taxed at the location of the income-producing activity, subjecting the out-of-state income of West Virginia-based service providers to in-state taxation. All this is set to change in 2022, when the state will shift to single sales factor apportionment, adopt benefit sourcing, and repeal its throwout rule, under legislation adopted in April 2021.
+
+West Virginia also imposes local gross receipts taxes (Business & Occupation taxes) on select industries, which affects some of our model firms, including the technology center. The state’s property tax applies to equipment and inventory as well as land and buildings.
+
+West Virginia ranks 41st for mature labor-intensive and 42nd for mature capital-intensive manufacturing. The main factor in the high tax costs on these operations is an overly broad property tax base that includes equipment and inventory, though in the case of mature labor-intensive firms, a high income tax burden contributes as well. Sales taxes on manufacturing machinery are offset by credits.
+
+The mature research and development (R&D) facility ranks 49th with an effective tax rate of 19.4 percent despite lower-than-average sales, property, and unemployment insurance taxes. These benefits are overshadowed by a very high income burden despite lower-than-average sales, property, and unemployment insurance taxes, with business and income taxes more than 15 times the median. Technology and shared services centers both rank very poorly due to significantly above-average income tax burdens.
