--- a/src/data/state-text/original/55-WI.md
+++ b/src/data/state-text/original/55-WI.md
@@ -3,3 +3,10 @@ id: 55
 name: Wisconsin
 ---
 
+Wisconsin’s corporate income tax is levied at a high rate of 7.9 percent, and a throwback rule is applied. However, single sales factor apportionment is used, and service income is sourced where the benefit is received, reducing income tax burdens for firms that primarily sell out of state. The property tax base extends to machinery and equipment, to the detriment of manufacturing, distribution, and research and development (R&D) facilities.
+
+Nevertheless, the mature capital-intensive manufacturing firm sees a modest overall effective rate of 10.2 percent, ranking 16th for its category. The other manufacturing firm iterations perform even better, each ranking in the top 10 for low total effective tax rates, in large part because new manufacturing firms qualify for several generous tax incentives—including property tax abatements, investment credits, and jobs credits—while the mature firms receive property tax abatements and other tax credits.
+
+Wisconsin ranks 24th for the mature R&D facility with an effective tax rate of 11.9 percent. The operation experiences a low income tax burden due to R&D tax incentives and sourcing rules that place much of the operation’s income where the benefits are received. This operation also faces a low sales tax burden that partially offsets its property tax burden. Corporate headquarters rank worst in Wisconsin, with the new firm ranking 32nd and the mature firm 39th due to a combination of high corporate income, unemployment insurance, and property taxes.
+
+Several types of incentives, including the generous Manufacturing & Agriculture Credit (MAC), are available to manufacturing firms, while investment and jobs credits are available to new firms more broadly. These incentives, plus R&D credits, result in six of the eight new firms experiencing negative effective income tax rates, while several of the mature firms face above-average income tax burdens.
