--- a/src/data/state-text/original/16-ID.md
+++ b/src/data/state-text/original/16-ID.md
@@ -3,3 +3,10 @@ id: 16
 name: Idaho
 ---
 
+Idaho offers both an investment tax credit and a modest nonrefundable new jobs credit, but a moderately high corporate income tax and sourcing rules that expose all in-state income-producing activity to Idaho taxes yields middle-of-the-road tax burdens for most firms, both new and mature.
+
+Mature shared services centers experience the 10th best effective rate in the county, at 18.2 percent. While the state has a throwback rule and sources services to the site of the income-producing activity, a low property tax burden combined with lower-than-average sales taxes and middle-of-the-road unemployment insurance costs serve to bring down the effective tax rate on such facilities.
+
+The state’s double-weighted sales factor apportionment formula works to the detriment of manufacturing operations and data centers. The state’s property tax also extends to equipment, although manufacturing machinery and research and development (R&D) equipment are exempt from sales taxes. Data centers see their equipment subject to the sales tax, although new centers benefit from an investment tax credit.
+
+Idaho ranks fifth for mature distribution centers with an effective tax rate of 22.1 percent, benefiting from low sales and property tax burdens.
