--- a/src/data/state-text/original/26-MI.md
+++ b/src/data/state-text/original/26-MI.md
@@ -3,3 +3,10 @@ id: 26
 name: Michigan
 ---
 
+Michigan ranks among the states with the highest effective tax rates on new firms due to high property taxes, moderate income taxes, and the lack of incentives for firms other than manufacturers. For instance, the state ranks 50th for new tech centers, which experience the nation’s highest effective property tax rate for that firm type and a total effective rate 72 percent above than the average.
+
+The state is slightly more attractive for businesses with long time horizons or wishing to make a substantial investment in the state, but five of the eight mature firms in our study face an above-average tax burden as well. One of the exceptions is the mature data center, which pays a relatively low effective rate of just over half that national average, despite the new data center experiencing an average effective rate.
+
+The lack of a throwback rule, combined with single sales factor apportionment and benefits sourcing, works to the advantage of firms with clients or sales largely out of state, like the shared services center. On the other hand, high property tax burdens, and the application of the property tax to equipment, keep effective rates high for most of the model firms. New manufacturing operations receive the benefit of a generous property tax abatement, but similar incentives are not available to mature firms or to other firm types.
+
+Michigan imposes high effective tax rates on new and mature corporate office operations, which experience an effective tax rate of 25.6 percent and 22.1 percent, respectively. These are 56 percent and 32 percent higher than the median effective tax rate on such firms nationwide. Research and development (R&D) facilities and distribution centers also fare poorly, all burdened by high property taxes.
