--- a/src/data/state-text/original/29-MO.md
+++ b/src/data/state-text/original/29-MO.md
@@ -3,3 +3,10 @@ id: 29
 name: Missouri
 ---
 
+Corporate tax reforms implemented in 2020 cut Missouri’s corporate income tax rate from 6.25 to 4.0 percent, the nation’s second-lowest rate. Additionally, Missouri allows 50 percent of federal income tax payments to be deducted when calculating taxable income. While this deduction creates certain distortions and is inferior to a lower overall rate, the combined effect of a low rate and federal deductibility leads to low overall corporate tax burdens. As a result, the state ranks 10th best for new firms and 18th for mature firms.
+
+As part of this broader corporate tax reform package, Missouri uses single sales factor apportionment, having previously given firms a choice of three-factor or single sales factor. The state’s apportionment formula works to the advantage of firms basing their operations in-state. The state does, however, impose a throwback rule, imposing Missouri taxes on out-of-state activity not taxable in the destination state. This reduces the advantage of single sales factor apportionment and increases income tax burdens for the firms that primarily sell out of state, into states with which firms lack nexus.
+
+Missouri ranks 4th for new labor-intensive manufacturing operations and 11th nationwide for mature operations. The new firm benefits from extremely generous job tax credits and property tax abatements, in addition to structural provisions that favor all firms.
+
+Missouri sources services where the benefits are received, which is to the advantage of firms like shared services centers, and the state exempts manufacturing machinery from the sales tax, which lowers tax costs for both capital- and labor-intensive manufacturing companies. The state sales tax rate is above-average, however, which offsets some of the benefit provided by modest income taxes.
