--- a/src/data/state-text/original/31-NE.md
+++ b/src/data/state-text/original/31-NE.md
@@ -3,3 +3,10 @@ id: 31
 name: Nebraska
 ---
 
+Nebraska has low overall tax burdens for both mature and new firms, which rank 8th and 9th nationwide, respectively. Taking both new and mature iterations into account, seven of the model firm iterations in our study experience a negative effective income tax rate and six experience a zero percent effective income tax rate, leaving only three firms with a positive income tax burden. This is largely attributable to the ImagiNE Nebraska Act incentives program—one of the most generous incentives programs in the country—which provides investment credits, jobs credits, and research and development (R&D) credits, as well as property and other tax abatements to qualifying firms. For many firms, these incentives more than offset the state’s high corporate income tax rate of 7.81 percent.
+
+Mature data centers benefit from generous property tax abatements and the lowest unemployment insurance taxes for that firm type nationwide, resulting in the lowest total effective rate nationwide for this firm type. New data centers enjoy the second-lowest rate nationwide—just over a fifth of the national median. Many new and mature firms also benefit from the state’s favorable apportionment and sourcing rules.
+
+The state’s tax code deviates sharply from tax neutrality both across firm types and maturity. The mature R&D facility faces an effective tax rate of 10.4 percent, while the new firm experiences negative tax liability of -0.6 percent.
+
+The state’s apportionment system also contributes to Nebraska’s 6th place ranking for mature labor-intensive manufacturing. This operation has an effective tax rate 29 percent below the median even though it has an above-average property tax liability. Conversely, the new capital-intensive manufacturer pays a high total effective tax rate—despite low unemployment insurance taxes and a negative income tax burden—due to high property taxes that extend to business equipment.
