--- a/src/data/state-text/original/35-NM.md
+++ b/src/data/state-text/original/35-NM.md
@@ -3,3 +3,10 @@ id: 35
 name: New Mexico
 ---
 
+New Mexico phased in a reduction in its corporate income tax rate over several years, reducing it from 7.6 percent in 2013 to 5.9 percent by 2018. The state uses three-factor apportionment for most firms, although manufacturers and corporations headquartered in the state can elect to use single sales factor apportionment. There is also a throwback rule, but with an exemption for manufacturers that use single sales factor apportionment. New Mexico uses a market-based sourcing system, which is beneficial to service firms like shared services centers, and both the new and mature model firms of this type pay below-average rates.
+
+Although equipment is included in the state’s property tax base, overall property tax burdens in New Mexico are generally light. However, manufacturing machinery and research and development (R&D) equipment is also subject to the sales tax, which results in high sales tax burdens for affected firms.
+
+Unfavorable apportionment and high sales taxes drive up costs for new data centers in New Mexico, which experience an effective sales tax rate 20 times greater than the national median and an income tax rate more than 4.5 times greater than the national median. Mature data centers experience an income tax burden 224 percent above the national median. Manufacturers in New Mexico also experience some of the highest sales tax burdens in the country for their firm type. For example, the mature labor-intensive manufacturing operation has the 8th lowest property tax burden but the 2nd highest sales tax burden for its firm type.
+
+New R&D facilities enjoy a low effective tax rate of 5.9 percent in New Mexico due to a generous R&D tax credit, which results in a negative income tax rate of -10.8 percent. The firm also experiences moderate property and unemployment insurance tax burdens. The mature firm, by contrast, experiences a rate more than twice as high. New technology centers also benefit from incentives that result in a negative income tax rate of -3.1 percent.
