--- a/src/data/state-text/original/38-ND.md
+++ b/src/data/state-text/original/38-ND.md
@@ -3,3 +3,10 @@ id: 38
 name: North Dakota
 ---
 
+North Dakota’s low corporate income tax rate benefits firms operating largely or entirely in-state, like the corporate headquarters and research and development (R&D) facilities. However, its throwback rule and unfavorable sourcing rules disadvantage firms selling goods or services out-of-state, like the new labor-intensive manufacturing firm, with an effective tax rate of 9.9 percent. These factors, combined with relatively low reliance on incentives, result in North Dakota’s income tax burdens being above-average for 13 of the 16 model firms.
+
+Throwback and sourcing rules turn a low-rate tax into a substantial tax burden for some firms, but North Dakota’s very low property taxes help to compensate for high effective income tax rates. All firms in our study experience below-average property taxes. As a result, North Dakota ranks 10th overall for mature firms and 11th for new firms. All 16 model firm iterations face below-average total effective tax rates, and all but two—the new shared services center and the new data center—are also below the median. Unfavorable sourcing rules result in some of the highest income tax burdens nationwide for these types of firms.
+
+All firms benefit from North Dakota’s low property taxes, which are levied at low rates and do not apply to equipment or inventory. Additionally, several new firms—including the new data center, new distribution center, new capital-intensive manufacturer, and new labor-intensive manufacturer—qualify for property tax abatements that further reduce their tax liability, with North Dakota ranking among the top seven states for lowest effective property tax rates for these new firm types.
+
+North Dakota’s sales tax burdens tend to be above-average due in large part to the inclusion of manufacturing, R&D, and data center machinery in the sales tax base. Ten of the 16 model firms in our study face above-average sales tax burdens.
