--- a/src/data/state-text/original/40-OK.md
+++ b/src/data/state-text/original/40-OK.md
@@ -3,3 +3,10 @@ id: 40
 name: Oklahoma
 ---
 
+Oklahoma’s generous investment and withholding tax credits combine to yield a negative income tax burden for seven of the eight new firms (all but data centers). Consequently, all new firms experience below-average tax burdens and Oklahoma ranks first for new firms overall. The new shared services center, by way of example, has an effective income tax rate of -16.7 percent and a total effective tax rate of 3.8 percent. The firm benefits from Oklahoma’s generous withholding tax rebate and favorable sourcing rules for service income, which apportion the firm’s income where the market is. Mature shared services centers, by contrast, experience an effective tax rate of 17.7 percent.
+
+The state ranks 29th and 30th for mature labor- and capital-intensive manufacturing operations, respectively. While both firms benefit from low sales taxes, and the labor-intensive operation also benefits from low property taxes, both operations suffer from above-average income tax burdens that are driven in large part by the state’s apportionment formula and throwback rule. Oklahoma uses an evenly-weighted three-factor apportionment formula, except for firms with capital investment of more than $200 million, which may use double-weighted sales factor apportionment.
+
+Oklahoma ranks 7th overall for mature corporate headquarters, due primarily to relatively modest income and property tax burdens on this firm type. The state exempts manufacturing machinery from the sales tax base and provides a refund for sales taxes paid on research and development (R&D) expenditures. Together with generous incentives, these policies keep tax costs low for R&D firms.
+
+Similarly, due to incentives, new technology centers also enjoy a total effective tax rate less than half the national median. The property tax includes both equipment and inventory in addition to land and buildings, driving up property tax costs for mature firms and others not eligible for abatements.
