--- a/src/data/state-text/original/47-TN.md
+++ b/src/data/state-text/original/47-TN.md
@@ -3,3 +3,10 @@ id: 47
 name: Tennessee
 ---
 
+Tennessee notably forgoes an individual income tax, which benefits pass-through businesses but is not directly pertinent to the C corporations in our study. Nevertheless, the state compares well for overall tax burdens for these firms as well, ranking 15th for new firms and 7th for mature firms. The state levies a corporate income tax rate of 6.5 percent along with a high sales tax that has a substantial local component.
+
+Tennessee employs triple-weighted sales factor apportionment and forgoes a throwback rule, and manufacturers can elect to use single sales factor apportionment. Services are sourced to the location of the customer or client, which lowers the tax burden for firms like the shared services center. These provisions help balance out the state’s high sales tax burdens, particularly for operations doing business largely out of state. Twelve of the 16 model firm iterations in our study enjoy below-average tax burdens.
+
+The new distribution center incurs one of the lightest tax burdens relative to its peer firms in other states, with an effective tax rate of 21.5 percent, ranking 7th in the nation for its category. This firm benefits from the state’s property tax abatement, as well as investment and jobs tax credits. New manufacturers benefit from these same incentives, with the property tax abatement being particularly beneficial to the capital-intensive manufacturer, as Tennessee’s property tax extends to equipment.
+
+The new data center has a significantly below-average total effective tax rate of 6.8 percent. Generous incentives result in a property tax burden just over half the national median, keeping the overall effective rate low despite a moderate income tax burden.
