--- a/src/data/state-text/original/56-WY.md
+++ b/src/data/state-text/original/56-WY.md
@@ -3,3 +3,10 @@ id: 56
 name: Wyoming
 ---
 
+Wyoming ranks 1st overall for four mature firm types and in the top three for all eight, due to its lack of a corporate income tax and low sales and property taxes. Specifically, it ranks 1st in the nation for the mature shared services center, technology center, distribution center, and corporate headquarters. The state focuses more on low statutory tax rates—or no tax at all—than targeted incentives, hence its particularly strong rankings for mature firms. But the state ranks competitively for new firms, too, among the top 10 states for all but three of the new firms.
+
+Wyoming’s property tax is generally low but does apply to equipment as well as to land and buildings, and the state does not offer a property tax abatement for new manufacturing firms, unlike many of its peers. Nevertheless, the mature capital-intensive manufacturing operation ranks 2nd with an effective tax rate of 5.8 percent due to the lack of an income tax and modest sales and property taxes, and despite a high unemployment insurance tax burden.
+
+The new capital-intensive manufacturing firm experiences roughly average tax burdens for its type due to high unemployment insurance taxes and the capital stock tax (the franchise tax). Wyoming is one of 15 states to levy a capital stock tax, which is imposed on businesses regardless of profit, though Wyoming’s features the nation’s lowest rate. The firm also sees below-average property tax burdens despite the state’s lack of incentives. Manufacturing machinery is exempt from the sales tax.
+
+The mature research and development (R&D) facility has the lowest property tax burdens in the nation for its firm type, and its overall effective tax rate is just over half the median rate for that firm type nationwide. However, R&D equipment is subject to the sales tax in Wyoming, and new R&D operations receive no incentives, contributing to the rank of 18th for new facilities.
